[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/sprites/pattern.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/alphabet/T.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/alphabet/G.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/alphabet/E.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/alphabet/N.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/alphabet/S.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/alphabet/I.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/alphabet/L.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/alphabet/C.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/HUD/checkmark0001.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/alphabet/U.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/alphabet/F.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/alphabet/R.png" type="Texture" id=14]
[ext_resource path="res://assets/sound/sfx/sfx_select.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/sfx/sfx_comfirm.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sprites/HUD/pointerglove.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/HUD/checkmark0002.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/alphabet/V.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/alphabet/Y.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/alphabet/O.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/alphabet/M.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/HUD/settingsmneu/slider.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/HUD/settingsmneu/sliderball.png" type="Texture" id=24]
[ext_resource path="res://assets/sound/sfx/sfx_altselect.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sprites/HUD/settingsmneu/not done.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/menus/pointer3.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/menus/pointer2.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/menus/pointer1.png" type="Texture" id=29]
[ext_resource path="res://assets/scripts/option2.gd" type="Script" id=30]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec2 motion = vec2(0.0);
uniform float scale = 1.0;
uniform vec2 offset = vec2(0.0);

void vertex(){
	UV = (VERTEX + offset + TIME * motion) * TEXTURE_PIXEL_SIZE * (1.0/scale);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 6 )
shader_param/motion = Vector2( -30, -30 )
shader_param/scale = 1.0
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "checked",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "nocheck",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "notselect"

[sub_resource type="Animation" id=3]
resource_name = "pointing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 100, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -43.7505, -103.75 ), Vector2( -43.75, -80 ), Vector2( -43.7505, -103.75 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="settingstext" type="Control" parent="."]
margin_left = 480.0
margin_top = 492.0
margin_right = 480.0
margin_bottom = 492.0
rect_scale = Vector2( 0.7, 0.8 )

[node name="TextureRect2" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = -237.366
margin_top = -50.0
margin_right = -157.366
margin_bottom = 50.0
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = -167.366
margin_top = -54.0
margin_right = -67.3662
margin_bottom = 46.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = -86.3665
margin_top = -54.0
margin_right = 13.6336
margin_bottom = 46.0
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = -5.36646
margin_top = -55.0
margin_right = 94.6335
margin_bottom = 45.0
texture = ExtResource( 8 )

[node name="TextureRect6" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = 74.6335
margin_top = -56.0
margin_right = 174.634
margin_bottom = 44.0
texture = ExtResource( 6 )

[node name="TextureRect7" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = 151.634
margin_top = -56.0
margin_right = 251.634
margin_bottom = 44.0
texture = ExtResource( 4 )

[node name="TextureRect8" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = 231.634
margin_top = -54.0
margin_right = 331.634
margin_bottom = 46.0
texture = ExtResource( 7 )

[node name="TextureRect9" type="TextureRect" parent="settingstext"]
anchor_left = -0.108696
anchor_top = 0.06
anchor_right = -0.108696
anchor_bottom = 0.06
margin_left = -323.714
margin_top = -54.6
margin_right = -223.714
margin_bottom = 45.4
texture = ExtResource( 7 )

[node name="option1" type="Control" parent="."]
margin_top = 32.0
margin_right = 400.0
margin_bottom = 232.0

[node name="label" type="Control" parent="option1"]
margin_left = 10.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureRect" type="TextureRect" parent="option1/label"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 13 )

[node name="TextureRect2" type="TextureRect" parent="option1/label"]
margin_left = 82.0
margin_top = -2.0
margin_right = 182.0
margin_bottom = 98.0
texture = ExtResource( 12 )

[node name="TextureRect3" type="TextureRect" parent="option1/label"]
margin_left = 157.0
margin_right = 257.0
margin_bottom = 100.0
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="option1/label"]
margin_left = 219.0
margin_right = 319.0
margin_bottom = 100.0
texture = ExtResource( 9 )

[node name="TextureRect5" type="TextureRect" parent="option1/label"]
margin_left = 284.0
margin_top = -1.0
margin_right = 384.0
margin_bottom = 99.0
texture = ExtResource( 7 )

[node name="TextureRect6" type="TextureRect" parent="option1/label"]
margin_left = 354.0
margin_right = 454.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="TextureRect7" type="TextureRect" parent="option1/label"]
margin_left = 422.0
margin_top = -1.0
margin_right = 522.0
margin_bottom = 99.0
texture = ExtResource( 14 )

[node name="TextureRect8" type="TextureRect" parent="option1/label"]
margin_left = 511.0
margin_top = 8.0
margin_right = 611.0
margin_bottom = 108.0
texture = ExtResource( 5 )

[node name="TextureRect9" type="TextureRect" parent="option1/label"]
margin_left = 592.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 108.0
texture = ExtResource( 5 )

[node name="TextureRect10" type="TextureRect" parent="option1/label"]
margin_left = 662.0
margin_top = 3.0
margin_right = 762.0
margin_bottom = 103.0
texture = ExtResource( 6 )

[node name="box" type="Control" parent="option1"]
margin_left = 152.0
margin_top = 85.0
margin_right = 192.0
margin_bottom = 125.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="checkbox" type="AnimatedSprite" parent="option1/box"]
frames = SubResource( 4 )
animation = "nocheck"
centered = false

[node name="move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -6.117
bus = "SFX"

[node name="pointer" type="Control" parent="."]
margin_left = 97.0
margin_top = 403.0
margin_right = 137.0
margin_bottom = 443.0
rect_rotation = -90.0
rect_scale = Vector2( 0.7, -0.7 )

[node name="TextureRect" type="TextureRect" parent="pointer"]
margin_left = -43.75
margin_top = -80.0
margin_right = 56.25
margin_bottom = 120.0
texture = ExtResource( 17 )

[node name="pointeranim" type="AnimationPlayer" parent="pointer"]
anims/notselect = SubResource( 5 )
anims/pointing = SubResource( 3 )

[node name="confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -11.991
bus = "SFX"

[node name="option2" type="Control" parent="."]
margin_left = 605.0
margin_top = 28.0
margin_right = 1005.0
margin_bottom = 228.0
script = ExtResource( 30 )

[node name="static" type="Control" parent="option2"]
margin_left = 160.0
margin_top = 92.0
margin_right = 200.0
margin_bottom = 132.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="TextureRect" type="TextureRect" parent="option2/static"]
margin_right = 52.0
margin_bottom = 299.0
grow_horizontal = 0
rect_scale = Vector2( 1, 1.15 )
texture = ExtResource( 23 )
stretch_mode = 3

[node name="label" type="Control" parent="option2"]
margin_left = 70.0
margin_top = 6.0
margin_right = 110.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureRect" type="TextureRect" parent="option2/label"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 19 )

[node name="TextureRect2" type="TextureRect" parent="option2/label"]
margin_left = 82.0
margin_top = -2.0
margin_right = 182.0
margin_bottom = 98.0
texture = ExtResource( 21 )

[node name="TextureRect3" type="TextureRect" parent="option2/label"]
margin_left = 157.0
margin_right = 257.0
margin_bottom = 100.0
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="option2/label"]
margin_left = 224.0
margin_right = 324.0
margin_bottom = 100.0
texture = ExtResource( 12 )

[node name="TextureRect5" type="TextureRect" parent="option2/label"]
margin_left = 304.0
margin_right = 404.0
margin_bottom = 100.0
texture = ExtResource( 22 )

[node name="TextureRect6" type="TextureRect" parent="option2/label"]
margin_left = 402.0
margin_top = 2.0
margin_right = 502.0
margin_bottom = 102.0
texture = ExtResource( 5 )

[node name="Control" type="Control" parent="option2"]
margin_left = 186.0
margin_top = 192.0
margin_right = 196.0
margin_bottom = 392.0
rect_rotation = 180.0

[node name="mover" type="Control" parent="option2/Control"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 41.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="TextureRect" type="TextureRect" parent="option2/Control/mover"]
margin_left = -28.7501
margin_top = -28.75
margin_right = 43.2499
margin_bottom = 33.25
texture = ExtResource( 24 )
flip_h = true
flip_v = true

[node name="arrow" type="AnimatedSprite" parent="option2/Control"]
position = Vector2( 6, -247 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
frame = 2
playing = true
flip_v = true

[node name="arrow2" type="AnimatedSprite" parent="option2/Control"]
position = Vector2( 6, -197 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
playing = true
flip_h = true
flip_v = true

[node name="VSlider" type="VSlider" parent="option2"]
visible = false
margin_left = 56.0
margin_top = 180.0
margin_right = 72.0
margin_bottom = 196.0
max_value = 1.0
editable = false
scrollable = false

[node name="option3" type="Control" parent="."]
margin_top = 256.0
margin_right = 400.0
margin_bottom = 456.0

[node name="label" type="Control" parent="option3"]
margin_left = 87.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextureRect" type="TextureRect" parent="option3/label"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 19 )

[node name="TextureRect2" type="TextureRect" parent="option3/label"]
margin_left = 82.0
margin_top = -2.0
margin_right = 182.0
margin_bottom = 98.0
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="option3/label"]
margin_left = 157.0
margin_right = 257.0
margin_bottom = 100.0
texture = ExtResource( 20 )

[node name="TextureRect4" type="TextureRect" parent="option3/label"]
margin_left = 234.0
margin_top = 2.0
margin_right = 334.0
margin_bottom = 102.0
texture = ExtResource( 6 )

[node name="TextureRect5" type="TextureRect" parent="option3/label"]
margin_left = 314.0
margin_top = 4.0
margin_right = 414.0
margin_bottom = 104.0
texture = ExtResource( 10 )

[node name="box" type="Control" parent="option3"]
margin_left = 152.0
margin_top = 85.0
margin_right = 192.0
margin_bottom = 125.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="checkbox" type="AnimatedSprite" parent="option3/box"]
frames = SubResource( 4 )
animation = "checked"
centered = false

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -11.991

[node name="NotDone" type="Sprite" parent="."]
visible = false
position = Vector2( 485, 286 )
texture = ExtResource( 26 )

[connection signal="value_changed" from="option2/VSlider" to="option2" method="_on_VSlider_value_changed"]
